stderr
Card.java:2: error: ',', '}', or ';' expected
        Banana("Okinawa")
                         ^
Card.java:7: error: invalid method declaration; return type required
      private Fruit(String madein) { // コンストラクタの定義
              ^
2 errors
